Fixed alignment problem when logged out of n-peace

--- a/sites/all/themes/npeace/css/page--front.css
+++ b/sites/all/themes/npeace/css/page--front.css
@@ -81,7 +81,7 @@ body.front #content #highlight3 {
 /* Map Widget */
 #map-navigation-widget {
 	position:absolute;
-	top:400px;
+	top:340px;
 	left:500px;
 	height:200px;
 	width:200px;
